--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -58,8 +58,13 @@
 
   #certificates {
     .certificate {
-      &:nth-child(odd) {
+      &:nth-child(5) {
         grid-column: 3/5;
+        grid-row: 2/3;
+      }
+      &:nth-child(6) {
+        grid-column: 3/5;
+        grid-row: 3/4;
       }
     }
   }
